edition = "2023";

package wabenet.dodo.plugin.v1alpha2;

message PluginID {
  string type = 1;
  string name = 2;
}

message PluginMetadata {
  PluginID id= 1;
  repeated PluginID dependencies = 2;
  map<string, string> labels = 3;
}

message InitPluginResponse {
  map<string, string> config = 1;
}

message InputData {
  bytes data = 1;
}

message OutputData {
  enum Channel {
    INVALID = 0;
    STDOUT = 1;
    STDERR = 2;
  }

  Channel channel = 1;
  bytes data = 2;
}

message StreamInputRequest {
  oneof input_request_type {
    InitialStreamInputRequest initial_request = 1;
    InputData input_data = 2;
  }
}

message InitialStreamInputRequest {
  string id = 1;
}

message StreamOutputRequest {
  string id = 1;
}
